--- a/bsconfig.json
+++ b/bsconfig.json
@@ -13,6 +13,9 @@
   "bs-dependencies": [
     "@rescript/react"
   ],
+  "bs-dev-dependencies": [
+    "rescript-test"
+  ],
   "warnings": {
     "error": "+101"
   },
