--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "gentype": "^4.3.0",
+    "rescript-test": "^3.2.0",
     "typescript": "^4.6.3",
     "webpack-dev-server": "^4.7.4"
   }
